--- a/spreedly-master/real_transaction.html
+++ b/spreedly-master/real_transaction.html
@@ -14,59 +14,67 @@
 		$(document).ready(function () {
 
 			$("#payment_method").click(function () {
-        		
+			    var kind_payment = $("#kind_payment").val();
 			    var firstName = $("#firstname").val();
 			    var lastName = $("#lastname").val();
 			    var cardNumber = $("#cardNumber").val();
 			    var month = $("#month").val();
 			    var year = $("#year").val();
 			    var cvv = $("#cvv_payment").val();
+			    // var payment_method_identifier = $("#payment_method_identifier").val();
+			    // var some_other_things = $("#some_other_things").val();
 			    //with billing 
-			    var address_1 = $("#address_1").val();
-			    var address_2 = $("#address_2").val();
-			    var city = $("#city").val();
-			    var state = $("#state").val();
-			    var zip = $("#zip").val();
-			    var country = $("#country").val();
-			    var phone_number = $("#phone_number").val();
+			    // var address_1 = $("#address_1").val();
+			    // var address_2 = $("#address_2").val();
+			    // var city = $("#city").val();
+			    // var state = $("#state").val();
+			    // var zip = $("#zip").val();
+			    // var country = $("#country").val();
+			    // var phone_number = $("#phone_number").val();
 			    var email = $("#email").val();
 
-			     alert(firstName+'\n\n'+lastName+'\n\n'+cardNumber+'\n\n'+month+'\n\n'+year+'\n\n'+cvv+'\n\n'+
-			     	address_1+'\n\n'+address_2+'\n\n'+city+'\n\n'+state+'\n\n'+zip+'\n\n'+country+'\n\n'+phone_number);
-			   	//payment_method(firstName, lastName, cardNumber, month, year, cvv, address_1, address_2, city, state, zip, country, phone_number, email);
+			     // alert(firstName+'\n\n'+lastName+'\n\n'+cardNumber+'\n\n'+month+'\n\n'+year+'\n\n'+cvv+'\n\n'+ address_1+'\n\n'+address_2+'\n\n'+city+'\n\n'+state+'\n\n'+zip+'\n\n'+country+'\n\n'+phone_number);
+			   	payment_method(kind_payment, firstName, lastName, cardNumber, month, year, cvv, email);
+			   	// payment_method(kind_payment, firstName, lastName, cardNumber, month, year, cvv, address_1, address_2, city, state, zip, country, phone_number, email, payment_method_identifier, some_other_things);
 
 			});
 
-		  	function payment_method(firstName, lastName, cardNumber, month, year, cvv, address_1, address_2, city, state, zip, country, phone_number, email){
-		  		alert(firstName+'\n\n'+lastName+'\n\n'+cardNumber+'\n\n'+month+'\n\n'+year+'\n\n'+cvv+'\n\n'+address_1+'\n\n'+address_2+'\n\n'+city+'\n\n'+state+'\n\n'+zip+'\n\n'+country+'\n\n'+phone_number+'\n\n'+email);
+		  	function payment_method(kind_payment, firstName, lastName, cardNumber, month, year, cvv, email){
+		  		alert(kind_payment+'\n\n'+firstName+'\n\n'+lastName+'\n\n'+cardNumber+'\n\n'+month+'\n\n'+year+'\n\n'+cvv+'\n\n'+email);
+		  		// alert(kind_payment+'\n\n'+firstName+'\n\n'+lastName+'\n\n'+cardNumber+'\n\n'+month+'\n\n'+year+'\n\n'+cvv+'\n\n'+address_1+'\n\n'+address_2+'\n\n'+city+'\n\n'+state+'\n\n'+zip+'\n\n'+country+'\n\n'+phone_number+'\n\n'+email+'\n\n'+payment_method_identifier+'\n\n'+some_other_things);
+		  		var card = {
+				  "kind": kind_payment,
+				  "first_name": firstName,
+				  "last_name":lastName,
+				  "number": cardNumber,
+				  "verification_value": cvv,
+				  "month": month,
+				  "year": year,
+				  "email": email
+				}
 
-			    Spreedly.tokenize({
-					environmentKey: '8swOjWN7iUOAozk0w0tj9gvMBY8', // my environment key 
-					firstName: firstName,
-					lastName: lastName,
-					number: cardNumber,
-					month: month,
-					year: year,
-					cvv: cvv,
-					// including billing address
-					address_1: address_1,
-					address_2: address_2,
-					city: city,
-					state: state,
-					zip: zip,
-					country: country,
-					phone_number: phone_number,
-					email: email,
-				  callback: function(token) {
-				    // alert('I tokenized a payment! Woot! ' + token);
-				    console.log('I tokenized a payment! Woot! ' + token);
-				    document.getElementById('process_token_request').value = token;
-				  },
-				  error: function() {
-				    // alert('Something went horribly wrong.');
-				    console.log('Something went horribly wrong.');
+				// Serialize and URI encode parameters.
+				var paramStr = $.param(card);
+
+
+				var url = "https://core.spreedly.com/v1/payment_methods.js?environment_key=8swOjWN7iUOAozk0w0tj9gvMBY8&" + paramStr;
+
+				$.ajax({
+				  type: "GET",
+				  url: url,
+				  dataType: "jsonp"
+				}).success(function(data) {
+				  console.log(data);
+				  if (data.status === 201) {
+				    alert(data.transaction.payment_method.token);
+				  } else {
+				    alert('validation error')
 				  }
-				}); //spreedly.tokenize end
+				}).error(function(request, status, error) {
+				  console.log(error);
+				  alert('transmission error');
+				});
+
 		    };// payment_method function end
 
 		});// $(document).ready(function(){ }); end
@@ -77,15 +85,24 @@
 <div style="border: 1px solid #000; padding: 10px; margin-bottom: 20px;">
 <pre>Use this as sample:</pre>
 <pre>
+kind: 'credit-card', 'bank-transfer', 'paypal', 'cheque',
 firstName: 'Bob',
 lastName: 'Smith',
-number: '4111111111111111',
+number: '5555555555554444',
 month: 12,
 year: 2017,
 cvv: '123'
+payment method identifier: '448',
+some other things: 'Can be anything really',
 </pre>
 </div>
 <!-- For Payment_method -->
+<div>Kind of Payment: </div><select id="kind_payment" name="kind_payment">
+	<option value="">Credit card</option>
+	<option value="1">Paypay</option>
+	<option value="2">Cheque</option>
+	<option value="3">Bank Transfer</option>
+</select>
 <div>Firstname: </div> <input type="text" id="firstname" name="firstname" placeholder="Firstname"/>
 <div>Lastname: </div> <input type="text" id="lastname" name="lastname" placeholder="Lastname"/>
 <div>Card Number: </div> <input type="text" id="cardNumber" name="cardNumber" placeholder="Card Number"/>
@@ -117,16 +134,8 @@ cvv: '123'
 	<option value="2021">2021</option>
 </select>
 <div>CVV: </div> <input type="text" id="cvv_payment" name="cvv_payment" placeholder="ccv"/> <br>
-<hr>
-Billing Address
-<div class="align"><input type="text" id="address_1" name="address_1" placeholder="Address 1"/></div>
-<div class="align"><input type="text" id="address_2" name="address_2" placeholder="Address 2"/></div>
-<div class="align"><input type="text" id="city" name="city" placeholder="City"/></div>
-<div class="align"><input type="text" id="state" name="state" placeholder="State"/></div>
-<div class="align"><input type="text" id="zip" name="zip" placeholder="Zip"/></div>
-<div class="align"><input type="text" id="country" name="country" placeholder="Country"/></div>
-<div class="align"><input type="text" id="phone_number" name="phone_number" placeholder="Phone Number"/></div>
-<div class="align"><input type="text" id="email" name="email" placeholder="spreedly@email.com"/></div>
+<div>Email</div><input type="text" id="email" name="email" placeholder="spreedly@email.com"/>
+
 <br>
 <input type="submit" id="payment_method" name="payment_method" placeholder="Payment Method"/>
 <!-- End For Payment_method -->
