--- a/spreedly-master/spreedly2.html
+++ b/spreedly-master/spreedly2.html
@@ -82,7 +82,7 @@
 		});// $(document).ready(function(){ }); end
 
 	</script>
-</head>
+</head>9
 <body>
 <div style="border: 1px solid #000; padding: 10px; margin-bottom: 20px;">
 <pre>Use this as sample:</pre>
