--- a/spreedly-master/spreedly2.html
+++ b/spreedly-master/spreedly2.html
@@ -37,6 +37,17 @@
 
 			});
 
+			$("#process_payment").click(function () {
+			    var process_token_request = $("#process_token_request").val();
+			    var process_amount = $("#process_amount").val();
+			    var currency_code = $("#currency_code").val();
+
+			     // alert(firstName+'\n\n'+lastName+'\n\n'+cardNumber+'\n\n'+month+'\n\n'+year+'\n\n'+cvv+'\n\n'+ address_1+'\n\n'+address_2+'\n\n'+city+'\n\n'+state+'\n\n'+zip+'\n\n'+country+'\n\n'+phone_number);
+			     alert(process_token_request+'\n\n'+process_amount+'\n\n'+currency_code);
+			   	 process_payment(process_token_request, process_amount, currency_code);
+
+			});
+
 		  	function payment_method(firstName, lastName, cardNumber, month, year, cvv, email, payment_method_identifier, some_other_things){
 		  		alert(firstName+'\n\n'+lastName+'\n\n'+cardNumber+'\n\n'+cvv+'\n\n'+month+'\n\n'+year+'\n\n'+email+'\n\n'+payment_method_identifier+'\n\n'+some_other_things);
 
@@ -79,10 +90,40 @@
 				
 		    };// payment_method function end
 
+		    function process_payment(process_token_request, process_amount, currency_code){
+		    	// var transaction =   "<transaction> \
+							// 	        <payment_method_token>"+process_token_request+"</payment_method_token> \
+							// 	        <amount>"+amount+"</amount>\
+							// 	        <currency_code>"+currency_code+"</currency_code>\
+							// 	    </transaction>"
+				var transaction = {
+					"transaction": {
+						"payment_method_token":  process_token_request,
+						"process_amount": process_amount,
+						"currency_code": currency_code
+					}
+				}
+
+				var url = "https://core.spreedly.com/v1/gateways/CUK6uXH1GiQnxV2kW6apTPbJoi/purchase.xml?environment_key=8swOjWN7iUOAozk0w0tj9gvMBY8";
+
+				$.ajax({
+				  type: "POST",
+				  url: url,
+				  dataType: "json",
+				  data: transaction
+				}).success(function(data) {
+				  console.log(data);
+				  
+				}).error(function(request, status, error) {
+				  console.log(error);
+				  // alert('error');
+				});
+		    }
+
 		});// $(document).ready(function(){ }); end
 
 	</script>
-</head>9
+</head>
 <body>
 <div style="border: 1px solid #000; padding: 10px; margin-bottom: 20px;">
 <pre>Use this as sample:</pre>
