new TCC changes

--- a/TCC/trade.html
+++ b/TCC/trade.html
@@ -255,7 +255,7 @@ Result Below: <br>
   <input type="text" name="payment_reason" id="payment_reason" placeholder="Reason" /><br>
   <div>Payment Reference</div>
   <input type="text" name="payment_reference" id="payment_reference" placeholder="Payment Reference" /><br>
-  <div>Payment Type</div>
+ <!--   <div>Payment Type</div>
   <input type="text" name="payment_type" id="payment_type" value="local" /><br>
   <div>Payer Type</div>
   <input type="text" name="payer_type" id="payer_type" value="company" /><br>
@@ -266,7 +266,7 @@ Result Below: <br>
   <div>Payer City</div>
   <input type="text" name="payer_city" id="payer_city" value="London" /><br>
   <div>Payer Country</div>
-  <input type="text" name="payer_country" id="payer_country" value="United Kingdom" /><br>
+  <input type="text" name="payer_country" id="payer_country" value="United Kingdom" /><br> -->
 
   <input type="submit" name="payment_add" id="payment_add" value="Payment Add"/><br>
 
