new update for reease settlement trading

--- a/TCC/trade.html
+++ b/TCC/trade.html
@@ -193,17 +193,17 @@ Result Below: <br>
   <!-- Contact Reference  -->
   Find Contact:<div id="findContRef"></div><br>
 
-   <div>Your Contact Reference :</div><input type="text" name="find_cont_ref" id="find_cont_ref" placeholder="Contact Reference"/><br>
-   <input type="submit" name="findContact_ref_btn" id="findContact_ref_btn" value="Find Contact"/>
-   <hr/>
-   
-   Contact Reference:<div id="confRef"></div><br>
-   <div>Firstname:</div><input type="text" name="con_firstname" id="con_firstname" placeholder="Firstname"/>
-   <div>Lastname:</div><input type="text" name="con_lastname" id="con_lastname" placeholder="Lastname"/>
-   <div>Email:</div><input type="text" name="con_email" id="con_email" placeholder="Email"/>
-   <div>Account Number:</div><input type="text" name="acct_numb" id="acct_numb" placeholder="Account Number"/>
-   <div>Your Contact Reference :</div><input type="text" name="cont_ref" id="cont_ref" placeholder="Contact Reference"/><br>
-   <input type="submit" name="contact_ref_btn" id="contact_ref_btn" value="New Contact Reference"/>
+  <div>Your Contact Reference :</div><input type="text" name="find_cont_ref" id="find_cont_ref" placeholder="Contact Reference"/><br>
+  <input type="submit" name="findContact_ref_btn" id="findContact_ref_btn" value="Find Contact"/>
+  <hr/>
+
+  Contact Reference:<div id="confRef"></div><br>
+  <div>Firstname:</div><input type="text" name="con_firstname" id="con_firstname" placeholder="Firstname"/>
+  <div>Lastname:</div><input type="text" name="con_lastname" id="con_lastname" placeholder="Lastname"/>
+  <div>Email:</div><input type="text" name="con_email" id="con_email" placeholder="Email"/>
+  <div>Account Number:</div><input type="text" name="acct_numb" id="acct_numb" placeholder="Account Number"/>
+  <div>Your Contact Reference :</div><input type="text" name="cont_ref" id="cont_ref" placeholder="Contact Reference"/><br>
+  <input type="submit" name="contact_ref_btn" id="contact_ref_btn" value="New Contact Reference"/>
 
 </div>
 
@@ -218,6 +218,7 @@ Result Below: <br>
 
   <input type="text" name="trade_id_settle" id="trade_id_settle" placeholder='Trade ID'/><br>
   <input type="submit" name="settlement_add_trade" id="settlement_add_trade" value="Settlement Add Trade"/><br>
+  <input type="submit" name="settlement_release_trade" id="settlement_release_trade" value="Settlement Release Trade"/><br>
 
   <hr/>
 
