--- a/TCC/trade.html
+++ b/TCC/trade.html
@@ -44,16 +44,17 @@ Result Below: <br>
   <div>Buy Currency: </div>
   <select name="buy_currency" id="buy_currency">
     <option value="GBP">British pound</option>
-    <option value="EUR">EU euro</option>
-    <option value="USD">US Dollar</option>
-    <option value="CAD">Canadian Dollar</option>
     <option value="AUD">Australian Dollar</option>
+    <option value="MXN">Mexican Peso</option>
+    <!--  
+    <option value="USD">US Dollar</option>
+   <option value="CAD">Canadian Dollar</option>
+    <option value="EUR">EU euro</option>
     <option value="CHF">Swiss Franc</option>
     <option value="CZK">Czech Republic Koruna</option>
     <option value="DKK">Danish Krone</option>
     <option value="HKD">Hong Kong Dollar</option>
     <option value="JPY">Japanese Yen</option>
-    <option value="MXN">Mexican Peso</option>
     <option value="NOK">Norwegian Krone</option>
     <option value="NZD">New Zealand Dollar</option>
     <option value="PLN">Polish Zloty</option>
@@ -67,7 +68,7 @@ Result Below: <br>
     <option value="ILS">Israeli New Sheqel</option>
     <option value="SGD">Singapore Dollar</option>
     <option value="RON">Romania Leu</option>
-    <option value="THB">Thai Baht</option>
+    <option value="THB">Thai Baht</option> -->
   </select>
   <br />
   <div>Amount:</div> <input type="number" name="amount" id="amount" class="text" />
@@ -75,16 +76,17 @@ Result Below: <br>
   <div>Sell Currency:</div>             
   <select  name="sell_currency" id="sell_currency">
     <option value="GBP">British pound</option>
-    <option value="EUR">EU euro</option>
-    <option value="USD">US Dollar</option>
-    <option value="CAD">Canadian Dollar</option>
     <option value="AUD">Australian Dollar</option>
+    <option value="MXN">Mexican Peso</option>
+    <!--  
+    <option value="USD">US Dollar</option>
+   <option value="CAD">Canadian Dollar</option>
+    <option value="EUR">EU euro</option>
     <option value="CHF">Swiss Franc</option>
     <option value="CZK">Czech Republic Koruna</option>
     <option value="DKK">Danish Krone</option>
     <option value="HKD">Hong Kong Dollar</option>
     <option value="JPY">Japanese Yen</option>
-    <option value="MXN">Mexican Peso</option>
     <option value="NOK">Norwegian Krone</option>
     <option value="NZD">New Zealand Dollar</option>
     <option value="PLN">Polish Zloty</option>
@@ -94,10 +96,11 @@ Result Below: <br>
     <option value="ZAR">South Africa Rand</option>
     <option value="AED">United Arab Emirates Dirham</option>
     <option value="HUF">Hungarian Forint</option>
-    <option value="LTL">Lithuanian Litas</option>
+    <option value="LTL">Lithuanian Litas</option>\
     <option value="ILS">Israeli New Sheqel</option>
     <option value="SGD">Singapore Dollar</option>
     <option value="RON">Romania Leu</option>
+    <option value="THB">Thai Baht</option> -->
   </select>
   <br />
   <div>Side:</div>
@@ -126,50 +129,91 @@ Result Below: <br>
   <hr>
 
   <!-- for the trade with payment execute -->
-  <div><b>Trade with Execute Payment </b></div> <br>
-
-  <div>Amount:</div> <input type="number" name="ex_amount" id="ex_amount" class="text" />
-
-  <div>Beneficiary ID:</div> <input type="text" name="ex_ben" id="ex_ben" class="text" />
-
-  <div>Buy Currency:</div>
-  <select name="ex_buy_currency" id="ex_buy_currency">
+   <div>Buy Currency: </div>
+  <select name="buy_currency" id="buy_currency">
     <option value="GBP">British pound</option>
-    <option value="EUR">EU euro</option>
+    <option value="AUD">Australian Dollar</option>
+    <option value="MXN">Mexican Peso</option>
+    <!--  
     <option value="USD">US Dollar</option>
+   <option value="CAD">Canadian Dollar</option>
+    <option value="EUR">EU euro</option>
+    <option value="CHF">Swiss Franc</option>
+    <option value="CZK">Czech Republic Koruna</option>
+    <option value="DKK">Danish Krone</option>
+    <option value="HKD">Hong Kong Dollar</option>
+    <option value="JPY">Japanese Yen</option>
+    <option value="NOK">Norwegian Krone</option>
+    <option value="NZD">New Zealand Dollar</option>
+    <option value="PLN">Polish Zloty</option>
+    <option value="RUB">Russian Ruble</option>
+    <option value="SEK">Swedish Krona</option>
+    <option value="TRY">Turkish Lira</option>
+    <option value="ZAR">South Africa Rand</option>
+    <option value="AED">United Arab Emirates Dirham</option>
+    <option value="HUF">Hungarian Forint</option>
+    <option value="LTL">Lithuanian Litas</option>\
+    <option value="ILS">Israeli New Sheqel</option>
+    <option value="SGD">Singapore Dollar</option>
+    <option value="RON">Romania Leu</option>
+    <option value="THB">Thai Baht</option> -->
   </select>
   <br />
-
-  <div>Paymen Reference:</div> <input type="text" name="ex_payment_reference" id="ex_payment_reference" class="text" value="INVOICE-019264" />
-
-  <div>Payment Type:</div> <input type="text" name="ex_payment_type" id="ex_payment_type" class="text" value="local" />
-
-  <br />
-  <div>Reason:</div> <textarea name="ex_reason" id="ex_reason" class="text" rows="5" cols="30">Invoice Settlement</textarea>
-
+  <div>Amount:</div> <input type="number" name="amount_ben" id="amount_ben" class="text" />
   <br />
   <div>Sell Currency:</div>             
-  <select  name="ex_sell_currency" id="ex_sell_currency">
+  <select  name="sell_currency" id="sell_currency">
     <option value="GBP">British pound</option>
-    <option value="EUR">EU euro</option>
+    <option value="AUD">Australian Dollar</option>
+    <option value="MXN">Mexican Peso</option>
+    <!--  
     <option value="USD">US Dollar</option>
+   <option value="CAD">Canadian Dollar</option>
+    <option value="EUR">EU euro</option>
+    <option value="CHF">Swiss Franc</option>
+    <option value="CZK">Czech Republic Koruna</option>
+    <option value="DKK">Danish Krone</option>
+    <option value="HKD">Hong Kong Dollar</option>
+    <option value="JPY">Japanese Yen</option>
+    <option value="NOK">Norwegian Krone</option>
+    <option value="NZD">New Zealand Dollar</option>
+    <option value="PLN">Polish Zloty</option>
+    <option value="RUB">Russian Ruble</option>
+    <option value="SEK">Swedish Krona</option>
+    <option value="TRY">Turkish Lira</option>
+    <option value="ZAR">South Africa Rand</option>
+    <option value="AED">United Arab Emirates Dirham</option>
+    <option value="HUF">Hungarian Forint</option>
+    <option value="LTL">Lithuanian Litas</option>\
+    <option value="ILS">Israeli New Sheqel</option>
+    <option value="SGD">Singapore Dollar</option>
+    <option value="RON">Romania Leu</option>
+    <option value="THB">Thai Baht</option> -->
   </select>
   <br />
   <div>Side:</div>
-    <select name="ex_side" id="ex_side">
+    <select name="side" id="side">
       <option value="1">buy</option>
       <option value="2">sell</option>
     </select>
   <br/>
-  <div>Terms of Agreement:</div> <input type="checkbox" name="ex_term_agreement" id="ex_term_agreement"/>
+  <div>Terms of Agreement:</div> <input type="checkbox" name="term_agreement_ben" id="term_agreement_ben"/>
+  <br />
+  <div>Reason:</div> <textarea name="reason_ben" id="reason_ben" class="text" rows="5" cols="30"></textarea>
+  <br />
 
-  <div>Contat Referrence:</div> <input type="text" name="ex_contact_ref" id="ex_contact_ref" value="231614c0-2012-012e-c039-23001a48acdf" />
+  <div>Beneficiary ID</div> <input type="text" name="beneficiary_id" id="beneficiary_id"/>  <br />
+  <div>Payment Type</div> <input type="text" name="payment_ben_type" id="payment_ben_type"/>  <br />
+  <div>Payment Reference</div> <input type="text" name="payment_ref" id="payment_ref"/>  <br />
 
   <input type="hidden" name="token" id="token" value="" />
   <br />
-  <input type="submit" name="ex_trade_submit" id="ex_trade_submit" value="trade"/>
+  <input type="submit" name="trade_ben" id="trade_ben" value="trade with beneficiary"/>
 
   <br>
+  
+  <!-- for the trade confirm resend and deposit-->
+
 </div>
 
 <div class="divider">
@@ -247,8 +291,8 @@ Result Below: <br>
   <div>Currency:</div>             
   <select  name="payment_currency" id="payment_currency">
       <option value="GBP">British pound</option>
-      <option value="EUR">EU euro</option>
-      <option value="USD">US Dollar</option>
+      <option value="AUD">Australian Dollar</option>
+      <option value="MXN">Mexican Peso</option>
   </select><br>
   <div>Amount</div>
   <input type="text" name="payment_amount" id="payment_amount" placeholder="Amount" /><br>
