--- a/spreedly-master/spreedly2.html
+++ b/spreedly-master/spreedly2.html
@@ -37,16 +37,6 @@
 
 			});
 
-			$("#process_payment").click(function () {
-			    var process_token_request = $("#process_token_request").val();
-			    var process_amount = $("#process_amount").val();
-			    var currency_code = $("#currency_code").val();
-
-			     // alert(firstName+'\n\n'+lastName+'\n\n'+cardNumber+'\n\n'+month+'\n\n'+year+'\n\n'+cvv+'\n\n'+ address_1+'\n\n'+address_2+'\n\n'+city+'\n\n'+state+'\n\n'+zip+'\n\n'+country+'\n\n'+phone_number);
-			     alert(process_token_request+'\n\n'+process_amount+'\n\n'+currency_code);
-			   	 process_payment(process_token_request, process_amount, currency_code);
-
-			});
 
 		  	function payment_method(firstName, lastName, cardNumber, month, year, cvv, email, payment_method_identifier, some_other_things){
 		  		alert(firstName+'\n\n'+lastName+'\n\n'+cardNumber+'\n\n'+cvv+'\n\n'+month+'\n\n'+year+'\n\n'+email+'\n\n'+payment_method_identifier+'\n\n'+some_other_things);
@@ -86,16 +76,27 @@
 				  // alert('error');
 				  document.getElementById("process_token_request").value = 'Unexpected error>';
 				});
-
 				
 		    };// payment_method function end
 
-		    function process_payment(process_token_request, process_amount, currency_code){
-		    	// var transaction =   "<transaction> \
-							// 	        <payment_method_token>"+process_token_request+"</payment_method_token> \
-							// 	        <amount>"+amount+"</amount>\
-							// 	        <currency_code>"+currency_code+"</currency_code>\
-							// 	    </transaction>"
+
+			$("#process_payment").click(function () {
+			    var process_token_request = $("#process_token_request").val();
+			    var process_amount = $("#process_amount").val();
+			    var currency_code = $("#currency_code").val();
+
+			     // alert(firstName+'\n\n'+lastName+'\n\n'+cardNumber+'\n\n'+month+'\n\n'+year+'\n\n'+cvv+'\n\n'+ address_1+'\n\n'+address_2+'\n\n'+city+'\n\n'+state+'\n\n'+zip+'\n\n'+country+'\n\n'+phone_number);
+			     alert(process_token_request+'\n\n'+process_amount+'\n\n'+currency_code);
+			   	 process_payment(process_token_request, process_amount, currency_code);
+
+			});
+
+		    function process_payment(process_token_request = null, process_amount = null, currency_code = null){
+		    	/*var transaction =   "<transaction> \
+								        <payment_method_token>"+process_token_request+"</payment_method_token> \
+								        <amount>"+process_amount+"</amount>\
+								        <currency_code>"+currency_code+"</currency_code>\
+								    </transaction>"*/
 				var transaction = {
 					"transaction": {
 						"payment_method_token":  process_token_request,
@@ -105,11 +106,29 @@
 				}
 
 				var url = "https://core.spreedly.com/v1/gateways/CUK6uXH1GiQnxV2kW6apTPbJoi/purchase.xml?environment_key=8swOjWN7iUOAozk0w0tj9gvMBY8";
+				// var url = "https://core.spreedly.com/v1/payment_methods.json?environment_key=8swOjWN7iUOAozk0w0tj9gvMBY8";
+				// $.ajax({
+				// 	url: url,
+				// 	type: 'HEAD',
+				// 	error: function()
+				//     {
+				//         //file not exists
+				//         alert(1);
+				//     },
+				//     success: function()
+				//     {
+				//         //file exists
+				//         alert(2);
+				//     }
+				// });
+				console.log(transaction);
 
-				$.ajax({
+				ajax_request(transaction, url);
+				
+				/*$.ajax({
 				  type: "POST",
 				  url: url,
-				  dataType: "json",
+				  dataType: "jsonp",
 				  data: transaction
 				}).success(function(data) {
 				  console.log(data);
@@ -117,8 +136,60 @@
 				}).error(function(request, status, error) {
 				  console.log(error);
 				  // alert('error');
+				});*/
+		    }
+
+		    var ajax_request = function(data, url){
+		    	var xhr = createCORSRequest('GET', url);
+				if (!xhr) {
+				  throw new Error('CORS not supported');
+				}
+		    	$.ajax({
+					type: "POST",
+					url: url,
+					dataType: "json",
+					data: data,
+					beforeSend: function(result){
+						console.log("before");
+						console.log(result);
+					},
+					success: function(result){
+						console.log("success");
+						console.log(result);
+					},
+					complete: function(result){
+						console.log("after");
+						console.log(result);
+					},
+					error: function(xhr){
+						alert(xhr.responseText);
+					}
 				});
 		    }
+
+		    function createCORSRequest(method, url) {
+			  var xhr = new XMLHttpRequest();
+			  if ("withCredentials" in xhr) {
+
+			    // Check if the XMLHttpRequest object has a "withCredentials" property.
+			    // "withCredentials" only exists on XMLHTTPRequest2 objects.
+			    xhr.open(method, url, true);
+
+			  } else if (typeof XDomainRequest != "undefined") {
+
+			    // Otherwise, check if XDomainRequest.
+			    // XDomainRequest only exists in IE, and is IE's way of making CORS requests.
+			    xhr = new XDomainRequest();
+			    xhr.open(method, url);
+
+			  } else {
+
+			    // Otherwise, CORS is not supported by the browser.
+			    xhr = null;
+
+			  }
+			  return xhr;
+			}
 
 		});// $(document).ready(function(){ }); end
 
