update for settle and contacts add API

--- a/TCC/trade.html
+++ b/TCC/trade.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title></title>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="1.9.1_jquery.min.js"></script>
   <style type="text/css">
 
    .divider{
@@ -256,10 +256,11 @@ Result Below: <br>
   Respond Settlement:<div id="settleNew"></div><br>
 
   <input type="submit" name="settlement_create" id="settlement_create" value="Settlement Create"/><br>
-
+  <span>Settlement ID</span><br/>
   <input type="text" name="settle_id" id="settle_id" placeholder='Settlement ID'/><br>
   <input type="submit" name="settlement_summary" id="settlement_summary" value="Settlement ID" /><br>
 
+  <span>Trade ID</span><br/>
   <input type="text" name="trade_id_settle" id="trade_id_settle" placeholder='Trade ID'/><br>
   <input type="submit" name="settlement_add_trade" id="settlement_add_trade" value="Settlement Add Trade"/><br>
   <input type="submit" name="settlement_release_trade" id="settlement_release_trade" value="Settlement Release Trade"/><br>
