--- a/TCC/trade.html
+++ b/TCC/trade.html
@@ -78,29 +78,6 @@ Result Below: <br>
     <option value="GBP">British pound</option>
     <option value="AUD">Australian Dollar</option>
     <option value="MXN">Mexican Peso</option>
-    <!--  
-    <option value="USD">US Dollar</option>
-   <option value="CAD">Canadian Dollar</option>
-    <option value="EUR">EU euro</option>
-    <option value="CHF">Swiss Franc</option>
-    <option value="CZK">Czech Republic Koruna</option>
-    <option value="DKK">Danish Krone</option>
-    <option value="HKD">Hong Kong Dollar</option>
-    <option value="JPY">Japanese Yen</option>
-    <option value="NOK">Norwegian Krone</option>
-    <option value="NZD">New Zealand Dollar</option>
-    <option value="PLN">Polish Zloty</option>
-    <option value="RUB">Russian Ruble</option>
-    <option value="SEK">Swedish Krona</option>
-    <option value="TRY">Turkish Lira</option>
-    <option value="ZAR">South Africa Rand</option>
-    <option value="AED">United Arab Emirates Dirham</option>
-    <option value="HUF">Hungarian Forint</option>
-    <option value="LTL">Lithuanian Litas</option>\
-    <option value="ILS">Israeli New Sheqel</option>
-    <option value="SGD">Singapore Dollar</option>
-    <option value="RON">Romania Leu</option>
-    <option value="THB">Thai Baht</option> -->
   </select>
   <br />
   <div>Side:</div>
@@ -137,29 +114,6 @@ Result Below: <br>
     <option value="GBP">British pound</option>
     <option value="AUD">Australian Dollar</option>
     <option value="MXN">Mexican Peso</option>
-    <!--  
-    <option value="USD">US Dollar</option>
-   <option value="CAD">Canadian Dollar</option>
-    <option value="EUR">EU euro</option>
-    <option value="CHF">Swiss Franc</option>
-    <option value="CZK">Czech Republic Koruna</option>
-    <option value="DKK">Danish Krone</option>
-    <option value="HKD">Hong Kong Dollar</option>
-    <option value="JPY">Japanese Yen</option>
-    <option value="NOK">Norwegian Krone</option>
-    <option value="NZD">New Zealand Dollar</option>
-    <option value="PLN">Polish Zloty</option>
-    <option value="RUB">Russian Ruble</option>
-    <option value="SEK">Swedish Krona</option>
-    <option value="TRY">Turkish Lira</option>
-    <option value="ZAR">South Africa Rand</option>
-    <option value="AED">United Arab Emirates Dirham</option>
-    <option value="HUF">Hungarian Forint</option>
-    <option value="LTL">Lithuanian Litas</option>\
-    <option value="ILS">Israeli New Sheqel</option>
-    <option value="SGD">Singapore Dollar</option>
-    <option value="RON">Romania Leu</option>
-    <option value="THB">Thai Baht</option> -->
   </select>
   <br />
   <div>Amount:</div> <input type="number" name="amount_ben" id="amount_ben" class="text" />
@@ -169,29 +123,6 @@ Result Below: <br>
     <option value="GBP">British pound</option>
     <option value="AUD">Australian Dollar</option>
     <option value="MXN">Mexican Peso</option>
-    <!--  
-    <option value="USD">US Dollar</option>
-   <option value="CAD">Canadian Dollar</option>
-    <option value="EUR">EU euro</option>
-    <option value="CHF">Swiss Franc</option>
-    <option value="CZK">Czech Republic Koruna</option>
-    <option value="DKK">Danish Krone</option>
-    <option value="HKD">Hong Kong Dollar</option>
-    <option value="JPY">Japanese Yen</option>
-    <option value="NOK">Norwegian Krone</option>
-    <option value="NZD">New Zealand Dollar</option>
-    <option value="PLN">Polish Zloty</option>
-    <option value="RUB">Russian Ruble</option>
-    <option value="SEK">Swedish Krona</option>
-    <option value="TRY">Turkish Lira</option>
-    <option value="ZAR">South Africa Rand</option>
-    <option value="AED">United Arab Emirates Dirham</option>
-    <option value="HUF">Hungarian Forint</option>
-    <option value="LTL">Lithuanian Litas</option>\
-    <option value="ILS">Israeli New Sheqel</option>
-    <option value="SGD">Singapore Dollar</option>
-    <option value="RON">Romania Leu</option>
-    <option value="THB">Thai Baht</option> -->
   </select>
   <br />
   <div>Side:</div>
@@ -215,8 +146,45 @@ Result Below: <br>
 
   <br>
   
-  <!-- for the trade confirm resend and deposit-->
+  <!-- for the trade confirm resend and deposit -->
 
+</div>
+
+
+<!-- for the client quote  -->
+
+<div class="divider">
+  <span>Client Quote</span><br><br>
+  <div id="cq_response"></div><br>
+
+  <div>Buy Currency: </div>
+  <select name="cq_buy_currency" id="cq_buy_currency">
+    <option value="GBP">British pound</option>
+    <option value="AUD">Australian Dollar</option>
+    <option value="MXN">Mexican Peso</option>    
+  </select>
+  <br />
+  <div>Amount:</div> <input type="number" name="cq_amount" id="cq_amount" class="text" />
+  <br />
+  <div>Sell Currency:</div>             
+  <select  name="cq_sell_currency" id="cq_sell_currency">
+    <option value="GBP">British pound</option>
+    <option value="AUD">Australian Dollar</option>
+    <option value="MXN">Mexican Peso</option>
+  </select>
+  <br />
+  <div>Side:</div>
+    <select name="cq_side" id="cq_side">
+      <option value="1">buy</option>
+      <option value="2">sell</option>
+    </select>
+  <br/>
+  <input type="hidden" name="token" id="token" value="" />
+  <br />
+  <input type="submit" name="client_quote" id="client_quote" value="Client Quote"/>
+
+  <br><br>
+  
 </div>
 
 <div class="divider">
