new static for CCY pair

--- a/TCC/trade.html
+++ b/TCC/trade.html
@@ -183,7 +183,26 @@ Result Below: <br>
   <br />
   <input type="submit" name="client_quote" id="client_quote" value="Client Quote"/>
 
-  <br><br>
+  <br>
+  <hr/>
+  <br>
+  <div>CCY Pair first choice:</div>  
+  <select name="choice1" id="choice1">
+    <option value="GBP">British pound</option>
+    <option value="AUD">Australian Dollar</option>
+    <option value="MXN">Mexican Peso</option>    
+  </select>
+  <br /><br />
+  <div>CCY Pair second choice:</div>             
+  <select  name="choice2" id="choice2">
+    <option value="GBP">British pound</option>
+    <option value="AUD">Australian Dollar</option>
+    <option value="MXN">Mexican Peso</option>
+  </select>
+  <br /><br />
+  <div>Accept Stale</div> <input type="checkbox" name="accept_stale" id="accept_stale"/>
+  <br /><br />
+   <input type="submit" name="stale" id="stale" value="Accept Stale"/>
   
 </div>
 
