--- a/spreedly-master/spreedly2.html
+++ b/spreedly-master/spreedly2.html
@@ -36,7 +36,7 @@ Gateway Token: '<span id="gatewayToken"></span>'
 <!-- For Payment_method -->
 <div>Firstname: </div> <input type="text" id="firstname" name="firstname" placeholder="Firstname"/>
 <div>Lastname: </div> <input type="text" id="lastname" name="lastname" placeholder="Lastname"/>
-<div>Card Number: </div> <input type="text" id="cardNumber" name="cardNumber" placeholder="Card Number"/>
+<div>Card Number: </div> <input type="text" id="cardNumber" name="cardNumber" placeholder="Card Number" value="4111111111111111"/>
 <div>Exp: </div> 
 <select id="month" name="month">
 	<option value="">Month</option>
@@ -64,10 +64,10 @@ Gateway Token: '<span id="gatewayToken"></span>'
 	<option value="2021">2021</option>
 	<option value="2021">2021</option>
 </select>
-<div>CVV: </div> <input type="text" id="cvv_payment" name="cvv_payment" placeholder="ccv"/> <br>
-<div>Payment Method Identifier:</div><input type="text" name="payment_method_identifier" id="payment_method_identifier" placeholder="identifier"/>
-<div>Some other thing:</div><input type="text" name="some_other_things" id="some_other_things"/>
-<div>Email</div><input type="text" id="email" name="email" placeholder="spreedly@email.com"/>
+<div>CVV: </div> <input type="text" id="cvv_payment" name="cvv_payment" placeholder="ccv" value="411" /> <br>
+<div>Payment Method Identifier:</div><input type="text" name="payment_method_identifier" id="payment_method_identifier" placeholder="identifier" value="411" />
+<div>Some other thing:</div><input type="text" name="some_other_things" id="some_other_things" value="some_other_things"/>
+<div>Email</div><input type="text" id="email" name="email" placeholder="spreedly@email.com" value="spreedly@email.com"/>
 <!-- <hr>
 Billing Address
 <div class="align"><input type="text" id="address_1" name="address_1" placeholder="Address 1"/></div>
