--- a/TCC/trade.html
+++ b/TCC/trade.html
@@ -217,14 +217,14 @@ Result Below: <br>
 <div class="divider">
 
   Respond Beneficiary:<div id="benefNew"></div><br>
-  <div>Nickname:</div><input type="text" name="nickname" id="nickname" placeholder="GBP Account"/>
-  <div>Account CCY:</div><input type="text" name="account_ccy" id="account_ccy" placeholder="GBP"/>
-  <div>Beneficiary Name:</div><input type="text" name="beneficiary_name" id="beneficiary_name" placeholder="John Smith"/>
-  <div>Bank Name:</div><input type="text" name="bank_name" id="bank_name" placeholder="Barclays Bank plc"/>
-  <div>Bank Address:</div><input type="text" name="bank_address" id="bank_address"  placeholder="1 Churchill Place, London, E14 5HP, UK"/>
-  <div>Account Number:</div><input type="text" name="account_number" id="account_number" placeholder="13071472"/>
-  <div>Sort Code:</div><input type="text" name="sort_code" id="sort_code" placeholder="200605"/>
-  <div>Destination Country Code:</div><input type="text" name="destination_code" id="destination_code" placeholder="GB"/>
+  <div>Nickname:</div><input type="text" name="nickname" id="nickname" value="GBP Account"/>
+  <div>Account CCY:</div><input type="text" name="account_ccy" id="account_ccy" value="GBP"/>
+  <div>Beneficiary Name:</div><input type="text" name="beneficiary_name" id="beneficiary_name" value="John Smith"/>
+  <div>Bank Name:</div><input type="text" name="bank_name" id="bank_name" value="Barclays Bank plc"/>
+  <div>Bank Address:</div><input type="text" name="bank_address" id="bank_address"  value="1 Churchill Place, London, E14 5HP, UK"/>
+  <div>Account Number:</div><input type="text" name="account_number" id="account_number" value="13071472"/>
+  <div>Sort Code:</div><input type="text" name="sort_code" id="sort_code" value="200605"/>
+  <div>Destination Country Code:</div><input type="text" name="destination_code" id="destination_code" value="GB"/>
   <div>Beneficiary:</div><input type="checkbox" name="beneficiary" id="beneficiary"/>
   <div>source:</div><input type="checkbox" name="source" id="source"/>
   <br>
