update for sept 22

--- a/TCC/trade.html
+++ b/TCC/trade.html
@@ -234,7 +234,8 @@ Result Below: <br>
 
   <!-- Contact Reference  -->
   Find Contact:<div id="findContRef"></div><br>
-
+  <input type="submit" name="contact_all" id="contact_all" value="Find All Contact"/>
+  <hr/>
   <div>Your Contact Reference :</div><input type="text" name="find_cont_ref" id="find_cont_ref" placeholder="Contact Reference"/><br>
   <input type="submit" name="findContact_ref_btn" id="findContact_ref_btn" value="Find Contact"/>
   <hr/>
