new update for the currency cloud

--- a/spreedly-master/spreedly2.html
+++ b/spreedly-master/spreedly2.html
@@ -86,6 +86,15 @@ Billing Address
 <div class="align"><input type="text" id="currency_code" name="currency_code" placeholder="Ex: USD"/></div>
 <input type="submit" id="process_payment" name="process_payment" value="Process Payment"/>
 
+
+<!-- deleting payment method-->
+<hr/>
+
+<div class="align"><input type="text" id="payment_token" name="payment_token" placeholder="Token requested"/></div><input type="submit" id="delete_payment" name="delete_payment" value="Delete Payment Method"/>
+
+
+
 <script src="spreedly-master.js"></script>
+
 </body>
 </html>
